# DumbGame

./: .gitignore  TestProject.sln  todo.md
TestProject/: BaseGameObject.cpp  BaseGameObject.h  CMakeLists.txt  Game.cpp  Game.h  GameObject.h  TestGame.cpp  TestGame.h  TestProject.vcxproj  main.cpp
